Update Experiments thumbnails: new images, adjusted positioning and gradients

--- a/index.html
+++ b/index.html
@@ -404,144 +404,144 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <!-- StarSeed Odyssey -->
                 <div class="relative overflow-hidden bg-slate-50 p-6 rounded-2xl border border-slate-100" data-aos="fade-up">
-                    <div class="absolute inset-0 z-0 opacity-20 pointer-events-none">
-                        <div class="absolute inset-0 bg-gradient-to-r from-slate-50 via-slate-50/80 to-transparent"></div>
-                        <img src="https://images.unsplash.com/photo-1451187580459-43490279c0fa?q=80&w=2072&auto=format&fit=crop" class="w-full h-full object-cover object-right" alt="Space background">
+                    <div class="absolute inset-0 z-0 opacity-25 pointer-events-none">
+                        <div class="absolute inset-0 bg-gradient-to-r from-slate-50 via-slate-50 to-transparent" style="background: linear-gradient(to right, #f8fafc 45%, rgba(248, 250, 252, 0.8) 65%, transparent 100%);"></div>
+                        <img src="https://images.unsplash.com/photo-1451187580459-43490279c0fa?q=80&w=2072&auto=format&fit=crop" class="w-full h-full object-cover object-right translate-x-[30%]" alt="Space background">
                     </div>
                     <div class="relative z-10">
                         <div class="flex justify-between items-start mb-4">
                              <h4 class="text-xl font-bold text-slate-800">StarSeed Odyssey</h4>
                              <span class="text-xs bg-slate-900 text-white px-2 py-1 rounded">Three.js</span>
                         </div>
-                        <p class="text-slate-600 text-sm mb-4 max-w-[85%]">Solar system simulation and storytelling demo.</p>
+                        <p class="text-slate-600 text-sm mb-4 max-w-[65%]">Solar system simulation and storytelling demo.</p>
                         <a href="https://podcast-farm.com/projects/StarSeed/index.html" target="_blank" class="text-blue-600 text-sm font-medium hover:underline">Play Demo &rarr;</a>
                     </div>
                 </div>
 
                 <!-- DriftNote P2P -->
                 <div class="relative overflow-hidden bg-slate-50 p-6 rounded-2xl border border-slate-100" data-aos="fade-up" data-aos-delay="100">
-                    <div class="absolute inset-0 z-0 opacity-20 pointer-events-none">
-                        <div class="absolute inset-0 bg-gradient-to-r from-slate-50 via-slate-50/80 to-transparent"></div>
-                        <img src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?q=80&w=2070&auto=format&fit=crop" class="w-full h-full object-cover object-right" alt="Cybersecurity background">
+                    <div class="absolute inset-0 z-0 opacity-30 pointer-events-none">
+                        <div class="absolute inset-0 bg-gradient-to-r from-slate-50 via-slate-50 to-transparent" style="background: linear-gradient(to right, #f8fafc 45%, rgba(248, 250, 252, 0.8) 65%, transparent 100%);"></div>
+                        <img src="https://podcast-farm.com/projects/gitsite/driftnotethumb.png" class="w-full h-full object-cover object-right translate-x-[30%]" alt="DriftNote P2P">
                     </div>
                     <div class="relative z-10">
                         <div class="flex justify-between items-start mb-4">
                              <h4 class="text-xl font-bold text-slate-800">DriftNote P2P</h4>
                              <span class="text-xs bg-slate-900 text-white px-2 py-1 rounded">P2P / Node</span>
                         </div>
-                        <p class="text-slate-600 text-sm mb-4 max-w-[85%]">Digital message-in-a-bottle using Peer-to-Peer architecture.</p>
+                        <p class="text-slate-600 text-sm mb-4 max-w-[65%]">Digital message-in-a-bottle using Peer-to-Peer architecture.</p>
                         <a href="#" class="text-blue-600 text-sm font-medium hover:underline">View Source &rarr;</a>
                     </div>
                 </div>
 
                 <!-- EchoSonia -->
                 <div class="relative overflow-hidden bg-slate-50 p-6 rounded-2xl border border-slate-100" data-aos="fade-up">
-                    <div class="absolute inset-0 z-0 opacity-20 pointer-events-none">
-                        <div class="absolute inset-0 bg-gradient-to-r from-slate-50 via-slate-50/80 to-transparent"></div>
-                        <img src="https://images.unsplash.com/photo-1616499370260-485b3e5ed653?q=80&w=2070&auto=format&fit=crop" class="w-full h-full object-cover object-right" alt="VR background">
+                    <div class="absolute inset-0 z-0 opacity-40 pointer-events-none">
+                        <div class="absolute inset-0 bg-gradient-to-r from-slate-50 via-slate-50 to-transparent" style="background: linear-gradient(to right, #f8fafc 45%, rgba(248, 250, 252, 0.8) 65%, transparent 100%);"></div>
+                        <img src="https://podcast-farm.com/projects/gitsite/echosoniascreen.png" class="w-full h-full object-cover object-right translate-x-[30%]" alt="EchoSonia">
                     </div>
                     <div class="relative z-10">
                         <div class="flex justify-between items-start mb-4">
                              <h4 class="text-xl font-bold text-slate-800">EchoSonia</h4>
                              <span class="text-xs bg-slate-900 text-white px-2 py-1 rounded">WebXR</span>
                         </div>
-                        <p class="text-slate-600 text-sm mb-4 max-w-[85%]">VR exploration game using echolocation mechanics.</p>
+                        <p class="text-slate-600 text-sm mb-4 max-w-[65%]">VR exploration game using echolocation mechanics.</p>
                         <a href="https://www.loom.com/share/aba73d2f6cc24e25ba08b82884d145e4" target="_blank" class="text-blue-600 text-sm font-medium hover:underline">Watch Gameplay &rarr;</a>
                     </div>
                 </div>
 
                 <!-- IdeaForge -->
                 <div class="relative overflow-hidden bg-slate-50 p-6 rounded-2xl border border-slate-100" data-aos="fade-up" data-aos-delay="100">
-                    <div class="absolute inset-0 z-0 opacity-20 pointer-events-none">
-                        <div class="absolute inset-0 bg-gradient-to-r from-slate-50 via-slate-50/80 to-transparent"></div>
-                        <img src="https://images.unsplash.com/photo-1620712943543-bcc4688e7485?q=80&w=1965&auto=format&fit=crop" class="w-full h-full object-cover object-right" alt="AI background">
+                    <div class="absolute inset-0 z-0 opacity-40 pointer-events-none">
+                        <div class="absolute inset-0 bg-gradient-to-r from-slate-50 via-slate-50 to-transparent" style="background: linear-gradient(to right, #f8fafc 45%, rgba(248, 250, 252, 0.8) 65%, transparent 100%);"></div>
+                        <img src="https://podcast-farm.com/projects/gitsite/ideaforgelogo.png" class="w-full h-full object-cover object-right translate-x-[30%]" alt="IdeaForge">
                     </div>
                     <div class="relative z-10">
                         <div class="flex justify-between items-start mb-4">
                              <h4 class="text-xl font-bold text-slate-800">IdeaForge</h4>
                              <span class="text-xs bg-slate-900 text-white px-2 py-1 rounded">AI / NLP</span>
                         </div>
-                        <p class="text-slate-600 text-sm mb-4 max-w-[85%]">Jarvis-inspired platform to turn concepts into shipped products.</p>
+                        <p class="text-slate-600 text-sm mb-4 max-w-[65%]">Jarvis-inspired platform to turn concepts into shipped products.</p>
                         <a href="#" class="text-blue-600 text-sm font-medium hover:underline">View Source &rarr;</a>
                     </div>
                 </div>
 
                 <!-- HarmonySync -->
                 <div class="relative overflow-hidden bg-slate-50 p-6 rounded-2xl border border-slate-100" data-aos="fade-up">
-                    <div class="absolute inset-0 z-0 opacity-20 pointer-events-none">
-                        <div class="absolute inset-0 bg-gradient-to-r from-slate-50 via-slate-50/80 to-transparent"></div>
-                        <img src="https://podcast-farm.com/projects/gitsite/HarmonySyncMockup.jpg" class="w-full h-full object-cover object-right opacity-75" style="object-position: 80% center;" alt="HarmonySync">
+                    <div class="absolute inset-0 z-0 opacity-40 pointer-events-none">
+                        <div class="absolute inset-0 bg-gradient-to-r from-slate-50 via-slate-50 to-transparent" style="background: linear-gradient(to right, #f8fafc 45%, rgba(248, 250, 252, 0.8) 65%, transparent 100%);"></div>
+                        <img src="https://podcast-farm.com/projects/gitsite/HarmonySyncMockup.jpg" class="w-full h-full object-cover object-right translate-x-[30%]" alt="HarmonySync">
                     </div>
                     <div class="relative z-10">
                         <div class="flex justify-between items-start mb-4">
                              <h4 class="text-xl font-bold text-slate-800">HarmonySync</h4>
                              <span class="text-xs bg-slate-900 text-white px-2 py-1 rounded">Biometric AI</span>
                         </div>
-                        <p class="text-slate-600 text-sm mb-4 max-w-[85%]">Biometric conversation tool helping couples navigate conflict with heart rate monitoring and AI support.</p>
+                        <p class="text-slate-600 text-sm mb-4 max-w-[65%]">Biometric conversation tool helping couples navigate conflict with heart rate monitoring and AI support.</p>
                         <a href="#" class="text-blue-600 text-sm font-medium hover:underline">View Demo &rarr;</a>
                     </div>
                 </div>
 
                 <!-- Safety Check -->
                 <div class="relative overflow-hidden bg-slate-50 p-6 rounded-2xl border border-slate-100" data-aos="fade-up" data-aos-delay="100">
-                    <div class="absolute inset-0 z-0 opacity-20 pointer-events-none">
-                        <div class="absolute inset-0 bg-gradient-to-r from-slate-50 via-slate-50/80 to-transparent"></div>
-                        <img src="https://images.unsplash.com/photo-1522315641900-874dc98a7cbb?q=80&w=2070&auto=format&fit=crop" class="w-full h-full object-cover object-right" alt="Safety Check">
+                    <div class="absolute inset-0 z-0 opacity-40 pointer-events-none">
+                        <div class="absolute inset-0 bg-gradient-to-r from-slate-50 via-slate-50 to-transparent" style="background: linear-gradient(to right, #f8fafc 45%, rgba(248, 250, 252, 0.8) 65%, transparent 100%);"></div>
+                        <img src="https://images.unsplash.com/photo-1522315641900-874dc98a7cbb?q=80&w=2070&auto=format&fit=crop" class="w-full h-full object-cover object-right translate-x-[30%]" alt="Safety Check">
                     </div>
                     <div class="relative z-10">
                         <div class="flex justify-between items-start mb-4">
                              <h4 class="text-xl font-bold text-slate-800">Safety Check</h4>
                              <span class="text-xs bg-slate-900 text-white px-2 py-1 rounded">Social Impact</span>
                         </div>
-                        <p class="text-slate-600 text-sm mb-4 max-w-[85%]">Interactive assessment based on IPV research for evaluating relationship dynamics.</p>
+                        <p class="text-slate-600 text-sm mb-4 max-w-[65%]">Interactive assessment based on IPV research for evaluating relationship dynamics.</p>
                         <a href="relationship-radar.html" class="text-blue-600 text-sm font-medium hover:underline">Try Tool &rarr;</a>
                     </div>
                 </div>
 
                 <!-- Root Code -->
                 <div class="relative overflow-hidden bg-slate-50 p-6 rounded-2xl border border-slate-100" data-aos="fade-up">
-                     <div class="absolute inset-0 z-0 opacity-20 pointer-events-none">
-                        <div class="absolute inset-0 bg-gradient-to-r from-slate-50 via-slate-50/80 to-transparent"></div>
-                        <img src="https://podcast-farm.com/projects/gitsite/root-code.png" class="w-full h-full object-cover object-right opacity-75" style="object-position: 80% center;" alt="Root Code">
+                     <div class="absolute inset-0 z-0 opacity-40 pointer-events-none">
+                        <div class="absolute inset-0 bg-gradient-to-r from-slate-50 via-slate-50 to-transparent" style="background: linear-gradient(to right, #f8fafc 45%, rgba(248, 250, 252, 0.8) 65%, transparent 100%);"></div>
+                        <img src="https://podcast-farm.com/projects/gitsite/root-code.png" class="w-full h-full object-cover object-right translate-x-[30%]" alt="Root Code">
                     </div>
                     <div class="relative z-10">
                         <div class="flex justify-between items-start mb-4">
                              <h4 class="text-xl font-bold text-slate-800">Root Code</h4>
                              <span class="text-xs bg-slate-900 text-white px-2 py-1 rounded">Game Dev</span>
                         </div>
-                        <p class="text-slate-600 text-sm mb-4 max-w-[85%]">3D isometric soulslike exploring humanity's future and AI. Built in Godot 4.</p>
+                        <p class="text-slate-600 text-sm mb-4 max-w-[65%]">3D isometric soulslike exploring humanity's future and AI. Built in Godot 4.</p>
                         <a href="https://youtu.be/E2m-VFpzggg?si=AOPGoFHmXpIarQKW" target="_blank" class="text-blue-600 text-sm font-medium hover:underline">Watch Devlog &rarr;</a>
                     </div>
                 </div>
 
                 <!-- Jobi -->
                 <div class="relative overflow-hidden bg-slate-50 p-6 rounded-2xl border border-slate-100" data-aos="fade-up" data-aos-delay="100">
-                    <div class="absolute inset-0 z-0 opacity-20 pointer-events-none">
-                        <div class="absolute inset-0 bg-gradient-to-r from-slate-50 via-slate-50/80 to-transparent"></div>
-                        <img src="https://podcast-farm.com/projects/gitsite/jobithumb.png" class="w-full h-full object-cover object-right opacity-75" style="object-position: 80% center;" alt="Jobi">
+                    <div class="absolute inset-0 z-0 opacity-40 pointer-events-none">
+                        <div class="absolute inset-0 bg-gradient-to-r from-slate-50 via-slate-50 to-transparent" style="background: linear-gradient(to right, #f8fafc 45%, rgba(248, 250, 252, 0.8) 65%, transparent 100%);"></div>
+                        <img src="https://podcast-farm.com/projects/gitsite/jobithumb.png" class="w-full h-full object-cover object-right translate-x-[30%]" alt="Jobi">
                     </div>
                     <div class="relative z-10">
                         <div class="flex justify-between items-start mb-4">
                              <h4 class="text-xl font-bold text-slate-800">Jobi</h4>
                              <span class="text-xs bg-slate-900 text-white px-2 py-1 rounded">AI Automation</span>
                         </div>
-                        <p class="text-slate-600 text-sm mb-4 max-w-[85%]">AI-powered job search optimizer with automated matching and ATS-optimized resume generation.</p>
+                        <p class="text-slate-600 text-sm mb-4 max-w-[65%]">AI-powered job search optimizer with automated matching and ATS-optimized resume generation.</p>
                         <a href="https://www.loom.com/share/50324e09ee014be6baad8dec0bd2ee12?sid=16a09434-711f-40e4-bfbf-d1174e1f8b6f" target="_blank" class="text-blue-600 text-sm font-medium hover:underline">Watch Demo &rarr;</a>
                     </div>
                 </div>
 
                 <!-- AI Helper Mac App -->
                 <div class="relative overflow-hidden bg-slate-50 p-6 rounded-2xl border border-slate-100" data-aos="fade-up">
-                    <div class="absolute inset-0 z-0 opacity-20 pointer-events-none">
-                        <div class="absolute inset-0 bg-gradient-to-r from-slate-50 via-slate-50/80 to-transparent"></div>
-                        <img src="https://podcast-farm.com/projects/gitsite/aihelper.png" class="w-full h-full object-cover object-right opacity-75" style="object-position: 80% center;" alt="AI Helper">
+                    <div class="absolute inset-0 z-0 opacity-40 pointer-events-none">
+                        <div class="absolute inset-0 bg-gradient-to-r from-slate-50 via-slate-50 to-transparent" style="background: linear-gradient(to right, #f8fafc 45%, rgba(248, 250, 252, 0.8) 65%, transparent 100%);"></div>
+                        <img src="https://podcast-farm.com/projects/gitsite/aihelper.png" class="w-full h-full object-cover object-right translate-x-[30%]" alt="AI Helper">
                     </div>
                     <div class="relative z-10">
                         <div class="flex justify-between items-start mb-4">
                              <h4 class="text-xl font-bold text-slate-800">AIHelper Mac App</h4>
                              <span class="text-xs bg-slate-900 text-white px-2 py-1 rounded">MacOS</span>
                         </div>
-                        <p class="text-slate-600 text-sm mb-4 max-w-[85%]">Native macOS menu bar app for seamless AI assistance with system-wide text selection processing.</p>
+                        <p class="text-slate-600 text-sm mb-4 max-w-[65%]">Native macOS menu bar app for seamless AI assistance with system-wide text selection processing.</p>
                         <a href="#" class="text-blue-600 text-sm font-medium hover:underline">View Demo &rarr;</a>
                     </div>
                 </div>
