--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
             </div>
 
             <div class="text-center mb-12 mt-24">
-                <h3 class="text-2xl font-bold text-slate-900">Experiments & Prototypes</h3>
+                <h3 class="text-2xl font-bold text-slate-900">Side Quests & Prototypes</h3>
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
