--- a/personal-os-analysis-complete.html
+++ b/personal-os-analysis-complete.html
@@ -3959,7 +3959,7 @@ Are we building productivity systems or life support systems?</p>
 <strong>Cost Range:</strong> $0 to $400/month<br />
 <strong>Setup Range:</strong> 2 minutes to 1.5+ years (iterative development)<br />
 <strong>Maturity Range:</strong> Early prototypes (&lt;6 months) to production-grade (1.5+ years)</p>
-<p><strong>Research Methodology:</strong> X/Twitter-sourced systems → Architecture analysis → Pattern extraction → Cross-system synthesis → Qualitative findings with academic grounding</p>
+<p><strong>Research Methodology:</strong> X/Twitter-sourced systems → Architecture analysis → Pattern extraction → Cross-system synthesis → Qualitative findings with academic grounding. And you bet I used a shit-load of AI to help compile these findings ;)</p>
 <hr />
 <p><strong>Disclaimer:</strong> This analysis is based on publicly shared information from X/Twitter posts, GitHub repositories, and community discussions. If you are a builder featured in this report and would like to request edits, provide feedback, or have your system adjusted or removed, please contact me on X: <a href="https://x.com/kleemarks">@kleemarks</a></p>
             </article>
