Add personal-os-1pager.pdf and update personal-os-analysis-complete.html

--- a/personal-os-analysis-complete.html
+++ b/personal-os-analysis-complete.html
@@ -806,6 +806,7 @@
 - Hype</p>
 <p><strong>The shift:</strong> From <strong>tool usage</strong> to <strong>infrastructure-as-conversation</strong>. Markdown files, AI agents, and layered context create self-evolving workspaces that maintain themselves.</p>
 <p><strong>Start here:</strong><br />
+- <strong>Short on time?</strong> Grab the <a href="https://ckelimarks.github.io/personal-os-1pager.pdf">1-Page Summary (PDF)</a><br />
 - Want to build your own? Jump to <a href="#minimal-implementation-guide-build-your-first-personal-os-in-30-minutes">30-Minute Implementation Guide</a><br />
 - Want to follow the builders? Jump to <a href="#builders-directory">Builders Directory</a><br />
 - Want the deep analysis? Keep reading</p>
