Add Open Graph meta tags for social preview

--- a/personal-os-analysis-complete.html
+++ b/personal-os-analysis-complete.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Operating Systems: A Comparative Analysis</title>
+
+    <!-- Open Graph / Social Preview -->
+    <meta property="og:title" content="Personal Operating Systems: A Comparative Analysis">
+    <meta property="og:description" content="The future of operating systems is deeply personal. How 11 builders are using AI agents to regulate emotion, attention, and context.">
+    <meta property="og:image" content="https://ckelimarks.github.io/report.png">
+    <meta property="og:url" content="https://ckelimarks.github.io/personal-os-analysis-complete.html">
+    <meta property="og:type" content="article">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Personal Operating Systems: A Comparative Analysis">
+    <meta name="twitter:description" content="The future of operating systems is deeply personal. How 11 builders are using AI agents to regulate emotion, attention, and context.">
+    <meta name="twitter:image" content="https://ckelimarks.github.io/report.png">
     <style>
         /* Whitey Theme with Floating TOC Sidebar */
         :root {
