Use personalOSreport.png for social preview

--- a/personal-os-analysis-complete.html
+++ b/personal-os-analysis-complete.html
@@ -8,7 +8,7 @@
     <!-- Open Graph / Social Preview -->
     <meta property="og:title" content="Personal Operating Systems: A Comparative Analysis">
     <meta property="og:description" content="The future of operating systems is deeply personal. How 11 builders are using AI agents to regulate emotion, attention, and context.">
-    <meta property="og:image" content="https://ckelimarks.github.io/report.png">
+    <meta property="og:image" content="https://ckelimarks.github.io/personalOSreport.png">
     <meta property="og:url" content="https://ckelimarks.github.io/personal-os-analysis-complete.html">
     <meta property="og:type" content="article">
 
@@ -16,7 +16,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Personal Operating Systems: A Comparative Analysis">
     <meta name="twitter:description" content="The future of operating systems is deeply personal. How 11 builders are using AI agents to regulate emotion, attention, and context.">
-    <meta name="twitter:image" content="https://ckelimarks.github.io/report.png">
+    <meta name="twitter:image" content="https://ckelimarks.github.io/personalOSreport.png">
     <style>
         /* Whitey Theme with Floating TOC Sidebar */
         :root {
